--- a/src/Css/Users.css
+++ b/src/Css/Users.css
@@ -1,49 +1,33 @@
-.product {
+.user {
     /* border:2px solid red; */
     height: 700px;
     width: 100%;
     
 }
 
-.product h2 {
+.user h2 {
     font-weight: bolder;
     color: white;
     font-size: 2rem;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 20px;
 }
-.product-header {
+.user-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
 }
-.add-product-btn {
-  background-color: white;
-  color: black;
-  border: none;
-  height: 45px;
-  width: 20vh;
-  margin-top: 30px;
-  margin-right: 30px;
-  padding: 8px 16px;
-  font-weight: bold;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-.add-product-btn:hover {
-  background-color: #645f5f;
-}
-.product input {
+
+.user-header input {
     margin-top: 30px;
     margin-left: 20px;
     width: 30%;
     height: 30px;
 }
 
-.product-heading {
-    margin-top: 50px;
+.user-heading {
+    margin-top: 30px;
     font-weight: bold;
     color: gray;
     border: 1px solid rgb(90, 81, 81);
@@ -51,13 +35,14 @@
 }
 
 
-.product-heading,
-.product-detail {
+.user-heading,
+.user-detail {
     display: grid;
     grid-template-columns: 80px 1fr 1fr 1fr 100px 60px 60px 80px;
     align-items: center;
     border-radius: 5px;
     width:95%;
+    height: 40px;
     margin-left: 20px;
     /* gap: 10px; */
     /* column-gap: 30px;  */
@@ -65,16 +50,16 @@
     border: 1px solid rgb(90, 81, 81);
 }
 
-.product-detail img {
-    width: 35px;
-    height: 35px;
-    /* border-radius: 50%; */
-    object-fit: cover;
-    margin-right: 15px;
-}
 
-.product-detail p {
+
+.user-detail p {
     color: white;
     margin: 0;
     font-size: 0.95rem;
+}
+.search-bar{
+    display: flex;
+    margin-top: -20px;
+    /* border: 2px solid red; */
+    border-radius: 5px;
 }
